--- a/pias3/Makefile
+++ b/pias3/Makefile
@@ -1,6 +1,6 @@
 obj-m +=pias.o
 pias-y :=params.o flow.o network.o main.o
-EXTRA_CFLAGS += -DANTI_STARVATION
+//EXTRA_CFLAGS += -DANTI_STARVATION
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
