--- a/pias4/Makefile
+++ b/pias4/Makefile
@@ -1,10 +1,8 @@
-obj-m +=pias.o
-pias-y :=params.o flow.o network.o main.o
-//EXTRA_CFLAGS += -DANTI_STARVATION
+obj-m += pias.o
+pias-y := params.o netfilter.o jprobe.o flow.o network.o main.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
-	
+
 clean:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
-	
